refactor(multithread-task): 重构多线程任务调度，拆分CollectTask类
1.  新增CollectTask类封装单个RDD分区的collect计算逻辑
2.  替换TaskScheduler中旧的Task引用为CollectTask
3.  更新README和文档中的相关描述，修正术语表述
4.  优化测试用例，增强并发验证逻辑